--- a/agent/deno.json
+++ b/agent/deno.json
@@ -4,6 +4,7 @@
   "exports": "./mod.ts",
   "imports": {
     "@ai-sdk/google": "npm:@ai-sdk/google@^1.2.19",
+    "@std/fs": "jsr:@std/fs@^1.0.18",
     "ai": "npm:ai@^4.3.16",
     "zod": "npm:zod@^3.25.64"
   },
