--- a/cli/deno.json
+++ b/cli/deno.json
@@ -1,8 +1,10 @@
 {
   "imports": {
     "@ai-sdk/google": "npm:@ai-sdk/google@^1.2.19",
+    "@cliffy/command": "jsr:@cliffy/command@^1.0.0-rc.7",
     "@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.7",
     "@cliffy/ansi": "jsr:@cliffy/ansi@^1.0.0-rc.7",
+    "@std/fs": "jsr:@std/fs@^1.0.18",
     "ai": "npm:ai@^4.3.16",
     "zod": "npm:zod@^3.25.64"
   }
