--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
       - name: Lint
         run: deno lint .
 
+      - name: Test
+        run: deno test --allow-all
+
       - name: Compile
         run: deno task compile:cli
