test: move @std/assert imports to the import map
Summary:

Moving the imports into the import map will make this more maintainable

Test Plan:

Run the CI

--- a/deno.json
+++ b/deno.json
@@ -2,5 +2,8 @@
   "workspace": ["agent", "cli", "tools"],
   "tasks": {
     "compile:cli": "deno compile --allow-run --allow-read --allow-write --allow-env --allow-net -o bin/fay ./cli/main.ts"
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.13"
   }
 }
