feat: add glob tool
Summary:

When the agent need to find out about the codebase it will often try and use
the `ls` command with the run tool. We can't assume this command will be in the
path for example on windows.

This implements a basic glob tool so the agent can use that instead. I am
hoping we don't need to implement a ls tool too and the agent will figure out
that the glob tool is the one it can use.

Test Plan:

Unit tests and ci

--- a/tools/deno.json
+++ b/tools/deno.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "exports": "./mod.ts",
   "imports": {
+    "@std/fs": "jsr:@std/fs@^1.0.18",
     "ai": "npm:ai@^4.3.16",
     "zod": "npm:zod@^3.25.64"
   },
