chore: add agents file to guide the agents on how to work
Summary:

This is a common file that will be read by agents to add project context.

Test Plan:

This will be tested and tweaked going forward.

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,11 @@
 {
   "workspace": ["agent", "cli", "tools"],
   "tasks": {
-    "compile:cli": "deno compile --allow-run --allow-read --allow-write --allow-env --allow-net -o bin/fay ./cli/main.ts"
+    "compile:cli": "deno compile --allow-run --allow-read --allow-write --allow-env --allow-net -o bin/fay ./cli/main.ts",
+    "preflight:test": "deno lint .",
+    "preflight:format": "deno fmt --check",
+    "preflight:test": "deno test --allow-all",
+    "preflight:compile": { "dependencies": ["compile:cli"] }
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.13"
